--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-dom": "16.13.1",
     "react-redux": "7.2.0",
     "redux": "4.0.5",
-    "redux-thunk": "2.3.0"
+    "redux-thunk": "2.3.0",
+    "reselect": "4.0.0"
   },
   "jest": {
     "resolver": "jest-webpack-resolver"
