--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "description": "Личный проект «Что посмотреть» от HTML Academy",
   "scripts": {
-    "eslint": "eslint --ext .jsx --ext .js src/",
+    "eslint": "npm run eslint.js && npm run eslint.ts",
+    "eslint.ts": "eslint --config .eslintrc-ts.yml --ext .tsx --ext .ts src/",
+    "eslint.js": "eslint --ext .jsx --ext .js src/",
     "test": "npm run eslint && npm run test.jest",
     "test.jest": "jest",
     "build": "webpack --mode production",
@@ -15,6 +17,8 @@
     "@babel/preset-env": "7.10.2",
     "@babel/preset-react": "7.10.1",
     "@types/react": "16.9.46",
+    "@typescript-eslint/eslint-plugin": "3.9.0",
+    "@typescript-eslint/parser": "3.9.0",
     "axios-mock-adapter": "1.18.2",
     "babel-jest": "26.0.1",
     "babel-loader": "8.1.0",
