--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@babel/core": "7.10.2",
     "@babel/preset-env": "7.10.2",
     "@babel/preset-react": "7.10.1",
+    "@types/jest": "26.0.10",
     "@types/react": "16.9.46",
+    "@types/react-test-renderer": "16.9.3",
     "@typescript-eslint/eslint-plugin": "3.9.0",
     "@typescript-eslint/parser": "3.9.0",
     "axios-mock-adapter": "1.18.2",
@@ -31,6 +33,7 @@
     "jest-webpack-resolver": "0.3.0",
     "react-test-renderer": "16.13.1",
     "redux-mock-store": "1.5.4",
+    "ts-jest": "26.2.0",
     "ts-loader": "8.0.2",
     "typescript": "3.9.7",
     "utility-types": "3.10.0",
