--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "26.0.1",
     "jest-webpack-resolver": "0.3.0",
     "react-test-renderer": "16.13.1",
+    "redux-devtools-extension": "2.13.8",
     "redux-mock-store": "1.5.4",
     "ts-jest": "26.2.0",
     "ts-loader": "8.0.2",
