--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-test-renderer": "16.13.1",
     "redux-devtools-extension": "2.13.8",
     "redux-mock-store": "1.5.4",
-    "ts-jest": "26.2.0",
+    "ts-jest": "25.2.1",
     "ts-loader": "8.0.2",
     "typescript": "3.9.7",
     "utility-types": "3.10.0",
@@ -56,10 +56,8 @@
     "redux-thunk": "2.3.0",
     "reselect": "4.0.0"
   },
-  "jest": {
-    "resolver": "jest-webpack-resolver"
-  },
   "jestWebpackResolver": {
+    "silent": true,
     "webpackConfig": "./webpack.config.js"
   }
 }
